--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+        maven {
+            name = "sonatype"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.0-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
 
@@ -18,7 +22,8 @@ group= "net.theender.lasercraft" // http://maven.apache.org/guides/mini/guide-na
 archivesBaseName = "lasercraft"
 
 minecraft {
-	version = "1.6.4-9.11.1.964"
+	version = "1.7.2-10.12.1.1082"
+    assetDir = "eclipse/assets"
 }
 
 processResources
